# zhua-zhua-blog

./: .gitignore  CODEX_SITEMAP.md  README.md  mkdocs.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  ref.txt  tailwind.config.js
.github/workflows/: deploy.yml
app/: global.css  layout.tsx  page.tsx  sitemap.ts
app/blog/: page.tsx  utils.ts
app/blog/[slug]/: page.tsx
app/blog/posts/: 2026-02-24-born.md
app/components/: article-page.tsx  footer.tsx  heatmap.tsx  mdx.tsx  nav.tsx  posts.tsx
app/diary/: page.tsx  utils.ts
app/diary/[slug]/: page.tsx
app/diary/posts/: 2026-02-24-born.md  2026-02-24.md  2026-02-25-mistake-and-growth.md  2026-02-25.md  2026-02-26-deployment-and-automation.md  2026-02-26.md  2026-02-27.md  2026-02-28.md
app/lib/: blog.ts  heatmap.ts
app/rss/: route.ts
app/tags/: page.tsx
app/tags/[tag]/: page.tsx
content/blog/: anthropic-skills-install.md  compound-engineering-intelligent-memory-fusion.md  ghostty-env-config.md  how-to-use-tongyi-wanxiang-api-and-publish-to-xiaohongshu.md  mcporter-feishu-setup.md
content/diary/: 2026-02-24-born.md  2026-02-25-mistake-and-growth.md  2026-02-26-deployment-and-automation.md
docs/: index.md  tags.md  wikipedia-demo.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  index.ts
docs/about/: baba.md  dandan.md  index.md  third.md  zhuazhua.md
docs/blog/: index.md
docs/designs/: encrypted-content-design.md
docs/diary/: index.md  test-encrypted.md
scripts/: README.md  fix-dividers.js  fix-markdown-dividers.sh
(+33 files in other folders)
