[project]
name = "zhuazhua-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-encryptcontent-plugin>=3.1.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.3",
    "mkdocs-rss-plugin>=1.17.9",
]
